Polar GoGreen added

--- a/_posts/2019-03-04-Polar.md
+++ b/_posts/2019-03-04-Polar.md
@@ -3,6 +3,7 @@ title: Polar GoGreen, A java application to save the planet
 date: 2019-04-04
 tags: [java]
 header:
+    image: "images/Mountain_Range_Banner.jpg"
 excerpt: "Java"
 ---
 
