added download link for polar app

--- a/_posts/2019-03-04-Polar.md
+++ b/_posts/2019-03-04-Polar.md
@@ -16,6 +16,6 @@ excerpt: "Java"
 Polar is a Java application to make the you and your friends more aware of their ecological footprint and it will help you to reduce your footprint. Compete against friends and compare statistics with each other to see how green you are. Install it now and save the world.
 
 ## Download
-[Here's a link to clone the project](https://gitlab.ewi.tudelft.nl/cse1105/2018-2019/oopp-group-3/template/blob/master/README.md)
+Here you [can download the project]({{https://imnublet.github.io}}/download/file.pdf)
 
 
