changed download link

--- a/_posts/2019-03-04-Polar.md
+++ b/_posts/2019-03-04-Polar.md
@@ -16,6 +16,6 @@ excerpt: "Java"
 Polar is a Java application to make the you and your friends more aware of their ecological footprint and it will help you to reduce your footprint. Compete against friends and compare statistics with each other to see how green you are. Install it now and save the world.
 
 ## Download
-Here you [can download the project]({{https://imnublet.github.io}}/download/polarclient-0.1.0.jar)
+Here you [can download the project]({{https://imnublet.github.io}}/download/client-0.1.0.jar)
 
 
