--- a/_posts/2019-03-04-Polar.md
+++ b/_posts/2019-03-04-Polar.md
@@ -13,13 +13,13 @@ excerpt: "Java"
 2. [Download link](#Download)
 
 ## About
-Polar is a Java application to make you and your friends more aware of their ecological footprint and it will help you to reduce your footprint. Compete against friends and compare statistics with each other to see how green you are. Install it now and save the world.
+Polar is a Java application to make you and your friends more aware of their ecological footprint. Polar also gives you advice on how  reduce your footprint. Compete against friends and compare statistics with each other to see how green you are. Install it now and save the world.
 
 ## Download
 [Here you can download the project version 1]({{https://imnublet.github.io}}/download/clientmac.jar)
 
 [Here you can download the project version 2]({{https://imnublet.github.io}}/download/clientv2.jar)
 
-[Here you can download the project version 3]({{https://imnublet.github.io}}/download/clientv3.jar) (Much more efficient and faster program - Recommended download for the best experience)
+[Here you can download the project version 3]({{https://imnublet.github.io}}/download/clientv3.jar) (Recommended download for the best experience)
 
 
